Checking in patch from Andreas to fix Mozilla's XSL hooks (bug 36038).  Does not affect the default mozilla build.